<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tejasshah.wifriends.ModifyNetworkActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etWName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_wireless_ssid"
        android:textColorHint="@color/colorBlueDark" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etWPass"
        android:layout_below="@+id/etWName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etWName"
        android:layout_alignEnd="@+id/etWName"
        android:hint="@string/hint_wireless_pwd"
        android:textColorHint="@color/colorBlueDark" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdateNetwork"
        android:id="@+id/bUpdate"
        android:layout_below="@+id/etWPass"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etWPass"
        android:layout_alignEnd="@+id/etWPass"
        android:background="@drawable/rounded_blue_button"
        android:textColor="#fff"
        android:textSize="20sp"
        android:layout_marginTop="15dp" />
</RelativeLayout>
