<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.tejasshah.wifriends.Home"
    tools:showIn="@layout/app_bar_home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/tvWelcomeTitle"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:textColor="@color/button_material_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/tvWelcomeTitle"
        android:layout_alignParentEnd="true">

        <Button
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:text="@string/btnAddNetwork"
            android:id="@+id/btnAddNetwork"
            android:background="@drawable/ring_button_blue"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:text="@string/btnModifyNetwork"
            android:id="@+id/btnModifyNetwork"
            android:background="@drawable/ring_button_red"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_below="@+id/btnAddNetwork"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:text="@string/btnAddFriends"
            android:id="@+id/btnAddFriends"
            android:background="@drawable/ring_button_red"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_above="@+id/btnModifyNetwork"
            android:layout_toEndOf="@+id/btnAddNetwork"
            android:layout_marginLeft="10dp" />

        <Button
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:text="@string/btnMyFriends"
            android:id="@+id/btnMyFriends"
            android:background="@drawable/ring_button_blue"
            android:textColor="#fff"
            android:textSize="22sp"
            android:layout_below="@+id/btnAddNetwork"
            android:layout_toEndOf="@+id/btnAddNetwork"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp" />
    </RelativeLayout>

</RelativeLayout>
